# opensd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cfg/: default_profile.ini
data/config/: config.ini
data/profiles/: default.ini  default.profile
doc/: gen.sh  hw.adoc  hw.html  manpage.adoc  opensdd.1  user manual.adoc  user manual.html  users_manual.html
opensdd/src/: appinfo.hpp  config.hpp  daemon.cpp  errors.cpp  errors.hpp  hidraw.cpp  hidraw.hpp  log.cpp  main.cpp  prog_args.cpp  prog_args.hpp  string_conv.cpp  string_conv.hpp  uinput.cpp  uinput.hpp
opensdd/src/drivers/: driver_base.hpp
opensdd/src/drivers/gamepad/: bindings.hpp  compat.hpp  driver.cpp  driver.hpp  drvconfig.hpp  hid_reports.hpp  hid_state.hpp  preset_default.hpp  presets.hpp  profile.hpp
scripts/: opensd_group.sh  reload_sysd.sh  reload_udev.sh
src/common/: config.hpp.in  errors.hpp  ini.cpp  ini.hpp  input_event_names.cpp  input_event_names.hpp  log.cpp  log.hpp  paths.cpp  paths.hpp  prog_args.cpp  xdg.cpp  xdg.hpp
src/opensdd/: appinfo.hpp  config.hpp  daemon.cpp  daemon.hpp  filemgr.cpp  files.cpp  files.hpp  hidraw.cpp  hidraw.hpp  main.cpp  profile_ini.cpp  profile_ini.hpp  profile_template.hpp  string_conv.cpp  string_conv.hpp  uinput.cpp  uinput.hpp  uinput_device_config.hpp
src/opensdd/drivers/: driver_base.hpp
src/opensdd/drivers/backlight/: driver.hpp
src/opensdd/drivers/gamepad/: bindings.hpp  driver.cpp  driver.hpp  drvconfig.hpp  hid_reports.hpp  hid_state.hpp  preset_default.hpp  preset_template.hpp  presets.hpp  profile.cpp  profile.hpp  profile_ini.cpp  profile_ini.hpp
systemd/: opensd.service
udev/: 60-opensd.rules
